changing process state handling

--- a/test/process.properties
+++ b/test/process.properties
@@ -1,9 +1,10 @@
 #########################################################
 # process.@.disabled=false
+#
 # process.@.shell.start.delay.ms=
+# process.@.shell.runas.daemon=false
 # process.@.shell.default.to.script.dir=false
 # process.@.shell.command.block=
-# process.@.shell.runas.daemon=false
 # process.@.shell.command.win=
 # process.@.shell.command.linux=
 # process.@.shell.command.mac=
@@ -37,7 +38,7 @@ process.tomcat.dependance.processes.local=
 
 #process.ping_google.disabled=true
 process.ping_google.shell.start.delay.ms=
-process.ping_google.shell.command.win=cmd.exe /c ping www.google.com -n 100
+process.ping_google.shell.command.win=cmd.exe /c ping www.google.com -n 2
 process.ping_google.shell.terminate.command.win=cmd.exe /c echo TERMINATE COMMAND
 process.ping_google.shell.output.filename=
 process.ping_google.shell.output.console=true
@@ -48,12 +49,22 @@ process.ping_google.shell.shutdown.all.on.termination=true
 process.ping_google.shell.shutdown.all.timeout.ms=
 
 #process.dir_windows.disabled=true
-process.dir_windows.shell.start.delay.ms=3000
+process.dir_windows.shell.start.delay.ms=2000
 process.dir_windows.shell.command.win=cmd.exe /c dir /s windows
 process.dir_windows.shell.output.filename=
 process.dir_windows.shell.output.console=true
 process.dir_windows.init.failed.regex=File Not Found
 process.dir_windows.init.timeout.ms=
 process.dir_windows.shell.shutdown.all.on.termination=true
-process.dir_windows.shell.shutdown.all.timeout.ms=3000
+process.dir_windows.shell.shutdown.all.timeout.ms=30000
 
+process.ping_yahoo.shell.start.delay.ms=
+process.ping_yahoo.shell.command.win=cmd.exe /c ping www.yahoo.com -n 5
+process.ping_yahoo.shell.output.filename=
+process.ping_yahoo.shell.output.console=true
+process.ping_yahoo.init.success.regex=
+process.ping_yahoo.init.timeout.ms=
+process.ping_yahoo.init.failed.regex=
+process.ping_yahoo.shell.shutdown.all.on.termination=true
+process.ping_yahoo.shell.shutdown.all.timeout.ms=
+process.ping_yahoo.dependance.processes.local=ping_google,tomcat
