fixing plugins IsFileExist & some STARTED condition

--- a/test/process.properties
+++ b/test/process.properties
@@ -26,45 +26,34 @@
 # process.@.dependance.timeout.ms=
 #########################################################
 
-#process.tomcat.disabled=true
-process.tomcat.shell.command.win=C:/dev/apache-tomcat-8.5.23/bin/runCatalina.bat run
-process.tomcat.shell.terminate.command.win=C:/dev/apache-tomcat-8.5.23/bin/shutdown.bat
-process.tomcat.shell.output.filename=
-process.tomcat.shell.output.console=true
-process.tomcat.init.success.regex=Using CLASSPATH\:
-process.tomcat.init.failed.regex=Address already in use: bind
-process.tomcat.init.timeout.ms=15000
-process.tomcat.dependance.processes.local=
+#process.countdown.disabled=true
+process.countdown.shell.command=java hl.common.shell.plugins.cmd.CountDown 3 s
+process.countdown.shell.terminate.command=
+process.countdown.shell.output.filename=
+process.countdown.shell.output.console=true
+process.countdown.init.success.regex=CountDown-OK
+process.countdown.init.failed.regex=
+process.countdown.init.timeout.ms=
+process.countdown.dependance.processes.local=
 
-#process.ping_google.disabled=true
-process.ping_google.shell.start.delay.ms=
-process.ping_google.shell.command.win=cmd.exe /c ping www.google.com -n 2
-process.ping_google.shell.terminate.command.win=cmd.exe /c echo TERMINATE COMMAND
-process.ping_google.shell.output.filename=
-process.ping_google.shell.output.console=true
-process.ping_google.init.success.regex=
-process.ping_google.init.timeout.ms=
-process.ping_google.init.failed.regex=
-process.ping_google.shell.shutdown.all.on.termination=true
-process.ping_google.shell.shutdown.all.timeout.ms=
+#process.check_file.disabled=true
+process.check_file.shell.command=java hl.common.shell.plugins.cmd.IsFileExist process.properties 3
+process.check_file.shell.terminate.command=
+process.check_file.shell.output.filename=
+process.check_file.shell.output.console=true
+process.check_file.init.success.regex=IsFileExist-OK
+process.check_file.init.failed.regex=
+process.check_file.init.timeout.ms=
+process.check_file.dependance.processes.local=countdown
 
-#process.dir_windows.disabled=true
-process.dir_windows.shell.start.delay.ms=2000
-process.dir_windows.shell.command.win=cmd.exe /c dir /s windows
-process.dir_windows.shell.output.filename=
-process.dir_windows.shell.output.console=true
-process.dir_windows.init.failed.regex=File Not Found
-process.dir_windows.init.timeout.ms=
-process.dir_windows.shell.shutdown.all.on.termination=true
-process.dir_windows.shell.shutdown.all.timeout.ms=30000
+#process.check_www.disabled=true
+process.check_www.shell.command=java hl.common.shell.plugins.cmd.IsHttpUrlReady www.google.com 3 1
+process.check_www.shell.terminate.command=
+process.check_www.shell.output.filename=
+process.check_www.shell.output.console=true
+process.check_www.init.success.regex=IsHttpUrlReady-OK
+process.check_www.init.failed.regex=
+process.check_www.init.timeout.ms=
+process.check_www.dependance.processes.local=check_file
 
-process.ping_yahoo.shell.start.delay.ms=
-process.ping_yahoo.shell.command.win=cmd.exe /c ping www.yahoo.com -n 5
-process.ping_yahoo.shell.output.filename=
-process.ping_yahoo.shell.output.console=true
-process.ping_yahoo.init.success.regex=
-process.ping_yahoo.init.timeout.ms=
-process.ping_yahoo.init.failed.regex=
-process.ping_yahoo.shell.shutdown.all.on.termination=true
-process.ping_yahoo.shell.shutdown.all.timeout.ms=
-process.ping_yahoo.dependance.processes.local=ping_google,tomcat
+
