--- a/build.xml
+++ b/build.xml
@@ -12,6 +12,10 @@
 		<javac srcdir="${src}" destdir="${build}" debug="true" source="1.6" target="1.6">
 			<classpath refid="compile.classpath"/>
 		</javac>
+		<copy todir="${build}"> 
+			<fileset dir="${src}" includes="**.ascii" />
+		</copy>
+
 	</target>
 	
 	<target name="jar" depends="compile">
