Implement log file auto roll configuration

--- a/test/process.properties
+++ b/test/process.properties
@@ -1,6 +1,9 @@
 #########################################################
 # process.@.disabled=false
 #
+# process.@.log.autoroll.file.count=5
+# process.@.log.autoroll.size.bytes=10000000
+#
 # process.@.shell.start.delay.ms=
 # process.@.shell.runas.daemon=false
 # process.@.shell.default.to.script.dir=false
