fixes auto roll bug and set 10MB and 5 files as default

--- a/test/process.properties
+++ b/test/process.properties
@@ -1,21 +1,24 @@
 #########################################################
 # process.@.disabled=false
 #
-# process.@.log.autoroll.file.count=5
-# process.@.log.autoroll.size.bytes=10000000
-#
 # process.@.shell.start.delay.ms=
 # process.@.shell.runas.daemon=false
 # process.@.shell.default.to.script.dir=false
+
 # process.@.shell.command.block=
 # process.@.shell.command.win=
 # process.@.shell.command.linux=
 # process.@.shell.command.mac=
+
 # process.@.shell.output.filename=
+# process.@.shell.output.file.autoroll.count=5
+# process.@.shell.output.file.autoroll.size.bytes=10000000
 # process.@.shell.output.console=false
+
 # process.@.shell.terminate.command.win=
 # process.@.shell.terminate.command.linux=
 # process.@.shell.terminate.command.mac=
+
 # process.@.shell.shutdown.all.on.termination=false
 # process.@.shell.shutdown.all.timeout.ms=30000
 
@@ -32,7 +35,7 @@
 #process.countdown.disabled=true
 process.countdown.shell.command=java hl.common.shell.plugins.cmd.CountDown 3 s
 process.countdown.shell.terminate.command=
-process.countdown.shell.output.filename=
+process.countdown.shell.output.filename=countdown.log
 process.countdown.shell.output.console=true
 process.countdown.init.success.regex=CountDown-OK
 process.countdown.init.failed.regex=
