Add configuration for process state ascii art folder

--- a/test/process.properties
+++ b/test/process.properties
@@ -1,4 +1,6 @@
 #########################################################
+# system.asciiart.folder=
+#
 # process.@.disabled=false
 #
 # process.@.shell.start.delay.ms=
@@ -33,7 +35,7 @@
 #########################################################
 
 #process.countdown.disabled=true
-process.countdown.shell.command=java hl.common.shell.plugins.cmd.CountDown 3 s
+process.countdown.shell.command=java hl.common.shell.plugins.cmd.CountDown 2 s
 process.countdown.shell.terminate.command=
 process.countdown.shell.output.filename=countdown.log
 process.countdown.shell.output.console=true
@@ -42,7 +44,7 @@ process.countdown.init.failed.regex=
 process.countdown.init.timeout.ms=
 process.countdown.dependance.processes.local=
 
-#process.check_file.disabled=true
+process.check_file.disabled=true
 process.check_file.shell.command=java hl.common.shell.plugins.cmd.IsFileExist process.properties 3
 process.check_file.shell.terminate.command=
 process.check_file.shell.output.filename=
@@ -52,7 +54,7 @@ process.check_file.init.failed.regex=
 process.check_file.init.timeout.ms=
 process.check_file.dependance.processes.local=countdown
 
-#process.check_www.disabled=true
+process.check_www.disabled=true
 process.check_www.shell.command=java hl.common.shell.plugins.cmd.IsHttpUrlReady www.google.com 3 1
 process.check_www.shell.terminate.command=
 process.check_www.shell.output.filename=
