Adding connection timeout

--- a/test/process.properties
+++ b/test/process.properties
@@ -44,7 +44,7 @@ process.countdown.init.failed.regex=
 process.countdown.init.timeout.ms=
 process.countdown.dependance.processes.local=
 
-process.check_file.disabled=true
+#process.check_file.disabled=true
 process.check_file.shell.command=java hl.common.shell.plugins.cmd.IsFileExist process.properties 3
 process.check_file.shell.terminate.command=
 process.check_file.shell.output.filename=
@@ -54,8 +54,8 @@ process.check_file.init.failed.regex=
 process.check_file.init.timeout.ms=
 process.check_file.dependance.processes.local=countdown
 
-process.check_www.disabled=true
-process.check_www.shell.command=java hl.common.shell.plugins.cmd.IsHttpUrlReady www.google.com 3 1
+#process.check_www.disabled=true
+process.check_www.shell.command=java hl.common.shell.plugins.cmd.IsHttpUrlReady http://203.127.252.70/scc/web/ng/#/situation-view 3 1
 process.check_www.shell.terminate.command=
 process.check_www.shell.output.filename=
 process.check_www.shell.output.console=true
@@ -63,5 +63,15 @@ process.check_www.init.success.regex=IsHttpUrlReady-OK
 process.check_www.init.failed.regex=
 process.check_www.init.timeout.ms=
 process.check_www.dependance.processes.local=check_file
+
+#process.check_failed_www.disabled=true
+process.check_failed_www.shell.command=java hl.common.shell.plugins.cmd.IsHttpUrlReady fakeurl.com/failed 3 0
+process.check_failed_www.shell.terminate.command=
+process.check_failed_www.shell.output.filename=
+process.check_failed_www.shell.output.console=true
+process.check_failed_www.init.success.regex=IsHttpUrlReady-OK
+process.check_failed_www.init.failed.regex=
+process.check_failed_www.init.timeout.ms=
+process.check_failed_www.dependance.processes.local=check_www
 
 
