Adding OS specific output log filename

--- a/test/process.properties
+++ b/test/process.properties
@@ -12,7 +12,9 @@
 # process.@.shell.command.linux=
 # process.@.shell.command.mac=
 
-# process.@.shell.output.filename=
+# process.@.shell.output.filename.win=
+# process.@.shell.output.filename.linux=
+# process.@.shell.output.filename.mac=
 # process.@.shell.output.file.autoroll.count=5
 # process.@.shell.output.file.autoroll.size.bytes=10000000
 # process.@.shell.output.console=false
