fix dependencies checking status in log

--- a/test/process.properties
+++ b/test/process.properties
@@ -30,10 +30,10 @@
 # process.@.init.success.regex=
 # process.@.init.failed.regex=
 
-# process.@.dependance.processes.local=
-# process.@.dependance.processes.remote=
-# process.@.dependance.check.interval.ms=
-# process.@.dependance.timeout.ms=
+# process.@.dependence.processes.local=
+# process.@.dependence.processes.remote=
+# process.@.dependence.check.interval.ms=
+# process.@.dependence.timeout.ms=
 #########################################################
 
 #process.countdown.disabled=true
@@ -44,17 +44,17 @@ process.countdown.shell.output.console=true
 process.countdown.init.success.regex=CountDown-OK
 process.countdown.init.failed.regex=
 process.countdown.init.timeout.ms=
-process.countdown.dependance.processes.local=
+process.countdown.dependence.processes.local=
 
 #process.check_file.disabled=true
 process.check_file.shell.command=java hl.common.shell.plugins.cmd.IsFileExist process.properties 3
 process.check_file.shell.terminate.command=
-process.check_file.shell.output.filename=
+process.check_file.shell.output.filename=fileexist.log
 process.check_file.shell.output.console=true
 process.check_file.init.success.regex=IsFileExist-OK
 process.check_file.init.failed.regex=
 process.check_file.init.timeout.ms=
-process.check_file.dependance.processes.local=countdown
+process.check_file.dependence.processes.local=countdown
 
 #process.check_www.disabled=true
 process.check_www.shell.command=java hl.common.shell.plugins.cmd.IsHttpUrlReady http://203.127.252.70/scc/web/ng/#/situation-view 3 1
@@ -64,7 +64,7 @@ process.check_www.shell.output.console=true
 process.check_www.init.success.regex=IsHttpUrlReady-OK
 process.check_www.init.failed.regex=
 process.check_www.init.timeout.ms=
-process.check_www.dependance.processes.local=check_file
+process.check_www.dependence.processes.local=check_file
 
 #process.check_failed_www.disabled=true
 process.check_failed_www.shell.command=java hl.common.shell.plugins.cmd.IsHttpUrlReady fakeurl.com/failed 3 0
@@ -74,6 +74,6 @@ process.check_failed_www.shell.output.console=true
 process.check_failed_www.init.success.regex=IsHttpUrlReady-OK
 process.check_failed_www.init.failed.regex=
 process.check_failed_www.init.timeout.ms=
-process.check_failed_www.dependance.processes.local=check_www
+process.check_failed_www.dependence.processes.local=check_www
 
 
