suppport generic and os specified commadn prefix

--- a/test/process.properties
+++ b/test/process.properties
@@ -8,9 +8,14 @@
 # process.@.shell.default.to.script.dir=false
 
 # process.@.shell.command.block=
+# process.@.shell.command=
 # process.@.shell.command.win=
 # process.@.shell.command.linux=
 # process.@.shell.command.mac=
+# process.@.shell.command.prefix=
+# process.@.shell.command.prefix.win=
+# process.@.shell.command.prefix.linux=exec
+# process.@.shell.command.prefix.mac=
 
 # process.@.shell.output.filename.win=
 # process.@.shell.output.filename.linux=
@@ -54,14 +59,14 @@ process.check_file.shell.output.console=true
 process.check_file.init.success.regex=IsFileExist-OK
 process.check_file.init.failed.regex=
 process.check_file.init.timeout.ms=
-process.check_file.dependence.processes.local=countdown
+process.check_file.dependence.processes.local=countdown,
 
 #process.check_www.disabled=true
-process.check_www.shell.command=java hl.common.shell.plugins.cmd.IsHttpUrlReady http://203.127.252.70/scc/web/ng/#/situation-view 3 1
+process.check_www.shell.command=java hl.common.shell.plugins.cmd.IsHttpUrlReady http://www.google.com 3 0
 process.check_www.shell.terminate.command=
 process.check_www.shell.output.filename=
 process.check_www.shell.output.console=true
-process.check_www.init.success.regex=IsHttpUrlReady-OK
+process.check_www.init.success.regex=Ihttps://203.127.252.44/git/cmt/neoface-jni-rest-api.git
 process.check_www.init.failed.regex=
 process.check_www.init.timeout.ms=
 process.check_www.dependence.processes.local=check_file
