correct new config from 'process' to 'system'

--- a/test/process.properties
+++ b/test/process.properties
@@ -1,5 +1,9 @@
 #########################################################
 # system.asciiart.folder=
+# system.shell.command.prefix=
+# system.shell.command.prefix.win=
+# system.shell.command.prefix.linux=
+# system.shell.command.prefix.mac=
 #
 # process.@.disabled=false
 #
@@ -40,6 +44,7 @@
 # process.@.dependence.check.interval.ms=
 # process.@.dependence.timeout.ms=
 #########################################################
+
 
 #process.countdown.disabled=true
 process.countdown.shell.command=java hl.common.shell.plugins.cmd.CountDown 2 s
