fixed command prefix bug

--- a/test/process.properties
+++ b/test/process.properties
@@ -1,9 +1,9 @@
 #########################################################
 # system.asciiart.folder=
-# system.shell.command.prefix=
-# system.shell.command.prefix.win=
-# system.shell.command.prefix.linux=
-# system.shell.command.prefix.mac=
+# system.command.prefix=
+# system.command.prefix.win=
+# system.command.prefix.linux=
+# system.command.prefix.mac=
 #
 # process.@.disabled=false
 #
@@ -45,7 +45,7 @@
 # process.@.dependence.timeout.ms=
 #########################################################
 
-
+#
 #process.countdown.disabled=true
 process.countdown.shell.command=java hl.common.shell.plugins.cmd.CountDown 2 s
 process.countdown.shell.terminate.command=
