--- a/test/process.properties
+++ b/test/process.properties
@@ -71,7 +71,7 @@ process.check_www.shell.command=java hl.common.shell.plugins.cmd.IsHttpUrlReady 
 process.check_www.shell.terminate.command=
 process.check_www.shell.output.filename=
 process.check_www.shell.output.console=true
-process.check_www.init.success.regex=Ihttps://203.127.252.44/git/cmt/neoface-jni-rest-api.git
+process.check_www.init.success.regex=IsHttpUrlReady-OK
 process.check_www.init.failed.regex=
 process.check_www.init.timeout.ms=
 process.check_www.dependence.processes.local=check_file
@@ -80,10 +80,30 @@ process.check_www.dependence.processes.local=check_file
 process.check_failed_www.shell.command=java hl.common.shell.plugins.cmd.IsHttpUrlReady fakeurl.com/failed 3 0
 process.check_failed_www.shell.terminate.command=
 process.check_failed_www.shell.output.filename=
+process.check_failed_www.shell.shutdown.all.on.termination=true
 process.check_failed_www.shell.output.console=true
 process.check_failed_www.init.success.regex=IsHttpUrlReady-OK
 process.check_failed_www.init.failed.regex=
 process.check_failed_www.init.timeout.ms=
 process.check_failed_www.dependence.processes.local=check_www
 
+#process.sleep.disabled=true
+process.sleep.shell.command=java hl.common.shell.plugins.cmd.Sleep 10
+process.sleep.shell.terminate.command=
+process.sleep.shell.output.filename=
+process.sleep.shell.output.console=true
+process.sleep.init.success.regex=SLEEPING
+process.sleep.init.failed.regex=
+process.sleep.init.timeout.ms=
+process.sleep.dependence.processes.local=
 
+
+#process.check_sit70_idm.disabled=true
+process.check_sit70_idm.shell.command=java hl.common.shell.plugins.cmd.IsHttpUrlReady http://203.127.252.70/appearvisapi/idmapi/stats?summaryOnly=true 3 0
+process.check_sit70_idm.shell.terminate.command=
+process.check_sit70_idm.shell.output.filename=
+process.check_sit70_idm.shell.output.console=true
+process.check_sit70_idm.init.success.regex=IsHttpUrlReady-OK
+process.check_sit70_idm.init.failed.regex=
+process.check_sit70_idm.init.timeout.ms=
+process.check_sit70_idm.dependence.processes.local=
