Adding envprop.xxx=yyy for System.getEnv('xxx')

--- a/test/process.properties
+++ b/test/process.properties
@@ -5,6 +5,10 @@
 # system.command.prefix.linux=
 # system.command.prefix.mac=
 #
+# = System.getEnv('envkey1') support
+# envprop.envkey1=value1
+# envprop.envkey2=value2
+#
 # process.@.disabled=false
 #
 # process.@.shell.start.delay.ms=
