Support multiple props file with 'system.addons.properties.files'

--- a/test/process.properties
+++ b/test/process.properties
@@ -1,4 +1,5 @@
 #########################################################
+# system.addons.properties.files=
 # system.asciiart.folder=
 # system.command.prefix=
 # system.command.prefix.win=
@@ -48,6 +49,8 @@
 # process.@.dependence.check.interval.ms=
 # process.@.dependence.timeout.ms=
 #########################################################
+
+system.addons.properties.files=
 
 #
 #process.countdown.disabled=true
