--- a/test/process.properties
+++ b/test/process.properties
@@ -52,6 +52,16 @@
 
 system.addons.properties.files=
 
+#process.hostname_check.disabled=true
+process.hostname_check.shell.command=java hl.common.shell.plugins.cmd.IsHostNameMapped ahostname
+process.hostname_check.shell.output.filename=
+process.hostname_check.shell.output.console=true
+process.hostname_check.init.success.regex=IsHostNameMapped-OK
+process.hostname_check.init.failed.regex=IsHostNameMapped-ERR
+process.hostname_check.init.timeout.ms=60000
+process.hostname_check.dependence.processes.local=
+
+
 #
 #process.countdown.disabled=true
 process.countdown.shell.command=java hl.common.shell.plugins.cmd.CountDown 2 s
@@ -114,3 +124,4 @@ process.check_sit70_idm.init.success.regex=IsHttpUrlReady-OK
 process.check_sit70_idm.init.failed.regex=
 process.check_sit70_idm.init.timeout.ms=
 process.check_sit70_idm.dependence.processes.local=
+
